fixed overflow issue.

--- a/src/index.css
+++ b/src/index.css
@@ -10,15 +10,11 @@ html,
 body,
 #root {
   width: 100%;
-  height: 200vh;
 }
-
-#root {
-  display: flex;
-  justify-content: center;
+body {
   background-color: hsl(30, 54%, 90%);
-  padding-top: 7.7rem;
-  max-width: 100%;
+  padding-block: 7.7rem;
+  /* height: 200vh; */
 }
 
 * {
@@ -27,6 +23,7 @@ body,
 }
 
 main {
+  margin-inline: auto;
   border-radius: 20px;
   max-width: 736px;
   height: max-content;
@@ -45,10 +42,10 @@ img {
   border-radius: 12px;
 }
 main > h1 {
-  margin-top: 1.7rem;
+  margin-top: 1rem;
   font-family: "Young Serif";
-  font-weight: 400;
-  font-size: 2.5rem;
+  font-weight: 800;
+  font-size: 2.8rem;
 }
 .description {
   margin-top: 0.8rem;
@@ -86,10 +83,10 @@ main > h1 {
 
 h2 {
   color: hsl(14, 45%, 36%);
-  margin-top: 1.5rem;
+  margin-top: 1rem;
   font-family: "Young Serif";
-  font-weight: 400;
-  font-size: 1.75rem;
+  font-weight: 600;
+  font-size: 2rem;
 }
 
 .ingredients-li {
@@ -135,7 +132,7 @@ li span {
 
 table {
   margin-top: 0.7rem;
-  width: 600px;
+  width: -webkit-fill-available;
   margin-inline: auto;
   border-collapse: collapse;
 }
@@ -145,12 +142,18 @@ tr {
 }
 
 td {
+  padding-left: 2rem;
   padding-block: 0.7rem;
   color: hsl(30, 10%, 34%);
 }
 
 td:first-child {
   width: 301px;
+}
+
+td:last-child {
+  color: hsl(14, 45%, 36%);
+  font-weight: 600;
 }
 
 tr:last-child {
